# team-builder

./: .dockerignore  .gitignore  Makefile  changelog.txt  example.env  new-reqs.md  pyproject.toml
app/: docs.py  main.py
app/api/: __init__.py  deps.py  urls.py
app/cache/: base_class.py  connection.py  listener.py
app/consts/: __init__.py  exercises_types.py  sports_types.py  surveys_sports.py  users_types.py  workouts_statuses.py  workouts_types.py
app/containers/: __init__.py  admins.py  auth.py  base_class.py  exercises.py  exercises_types.py  groups.py  health_questionnaires.py  serveys.py  sessions.py  sportsmans.py  sportsmans_groups.py  sportsmans_workouts.py  stress_questionnaires.py  teams.py  teams_groups_workouts.py  tgs_workouts.py  trainers.py  trainers_workouts.py  workouts.py  workouts_statuses.py
app/db/: base_class.py  mixins.py  session.py
app/models/: __init__.py  admins.py  exercises.py  exercises_types.py  groups.py  questionnaires.py  sessions.py  sportsmans.py  sportsmans_groups.py  sportsmans_trainigs.py  sportsmans_workouts.py  surveys.py  teams.py  teams_groups_workouts.py  tgs_workouts.py  trainers.py  trainers_workouts.py  trainigs.py  trainigs_statuses.py  workouts.py  workouts_statuses.py
app/repositories/: __init__.py  admins.py  base_mixins.py  exercises.py  exercises_types.py  groups.py  questionnaires.py  sessions.py  sportsmans.py  sportsmans_groups.py  sportsmans_workouts.py  surveys.py  teams.py  teams_groups_workouts.py  tgs_workouts.py  trainers.py  trainers_workouts.py  workouts.py  workouts_statuses.py
app/schemas/: __init__.py  admins.py  auth.py  base_class.py  exercises.py  exercises_types.py  groups.py  questinnaires.py  sessions.py  sportsmans.py  sportsmans_groups.py  sportsmans_workouts.py  surveys.py  team_surveys.py  teams.py  teams_groups_workouts.py  tgs_workouts.py  tokens.py  trainers.py  trainers_workouts.py  utils.py  workouts.py  workouts_statuses.py
app/services/: __init__.py  admins.py  auth.py  exercises.py  exercises_types.py  groups.py  health_questionnaires.py  sessions.py  sportsmans.py  sportsmans_groups.py  sportsmans_workouts.py  stress_questionnaires.py  surveys.py  teams.py  teams_groups_workouts.py  tgs_workouts.py  trainers.py  trainers_workouts.py  workouts.py  workouts_statuses.py
app/utils/: __init__.py  background.py  hasher.py  jwt.py  log_middleware.py  system_file.py  users_scope.py
certbot/: Dockerfile  generate-certificate.sh
changelog/: 01.03.2025.md  03.03.2025.md  old_changelog.txt
docker/: Dockerfile  docker-compose copy.yml  docker-compose.yml  docker-entrypoint.sh
files/: assetlinks.json
logs/: tb_log.service  tb_log.sh
migrations/: env.py
migrations/versions/: 157a6adca03d_add.py  1c26206b5860_.py  2fecbd7bb20b_create_tables.py  3371f7fc4ef9_all.py  38a72de528dc_add_surveys.py  3e51fc17f612_old_mgrs.py  40d9c55427e4_asd.py  45dd486b52f9_asd.py  51b68bd188ea_add_repeat_id.py  562ea6afa0cf_add_remember_me.py  6178216870e1_.py  63204fe352f0_add_created_at.py  66f4d74c6e58_create_tables.py  721f90602146_remove_stress_quistionare_time.py  728809400e03_asd.py  85a2b282b9c0_create_tables.py  914d4fa8f982_create_tables.py  97211e928680_add_new_fields.py  97e7bee71c27_asdasd.py  9d9584a4b4e9_remove_team_name_and_sport_type.py  (+16 more)
nginx/: 3rj9_bJNOEfuoqzgq4Zmudc93aqUaibMf9NJiaZttF8  Dockerfile  certf.crt  fullchain.pem  nginx.conf  privkey.pem
spa/: index.html  manifest.json
(+623 files in other folders)
